--- a/placestoeat.html
+++ b/placestoeat.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Welcome to Bath</title>
+    <title>Places to Eat</title>
 
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
@@ -54,7 +54,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Welcome to Bath!</h1>
+        <h1>Places to Eat</h1>
         <p>brief description</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
@@ -68,7 +68,7 @@
             <a href="thingstodo.html"><h2>Things to Do</h2></a>
           <p>
 
-          	<img src='file:///Users/ruthdarlow/desktop/bath-website/bath.jpeg'> </img>
+          	<img src='file:///Users/ruthdarlow/desktop/bath.jpeg'> </img>
           </p>
          
         </div>
@@ -80,7 +80,7 @@
         <div class="col-md-4">
           <h2>Shopping</h2>
           <p>
-          	<img src='file:///Users/ruthdarlow/desktop/bath-website/shoppingbath2.jpeg'> </img>
+          	<img src='file:///Users/ruthdarlow/desktop/shoppingbath2.jpeg'> </img>
           </p>
        
         </div>
