--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
          
         </div>
         <div class="col-md-4">
-          <h2>Places to Eat</h2>
+          <a href="placestoeat.html"><h2>Places to Eat</h2></a>
           <p><img src='file:///Users/ruthdarlow/desktop/bath-website/eatbath.jpeg'> </img></p>
           
        </div>
