--- a/placestoeat.html
+++ b/placestoeat.html
@@ -65,20 +65,20 @@
       <div class="row">
         <div class="col-md-4">
    
-            <a href="thingstodo.html"><h2>Things to Do</h2></a>
+            <a href="thingstodo.html"><h2>1</h2></a>
           <p>
 
-          	<img src='file:///Users/ruthdarlow/desktop/bath.jpeg'> </img>
+          	<img src='file:///Users/ruthdarlow/desktop/bath-website/bath.jpeg'> </img>
           </p>
          
         </div>
         <div class="col-md-4">
-          <h2>Places to Eat</h2>
+          <h2>2</h2>
           <p><img src='file:///Users/ruthdarlow/desktop/bath-website/eatbath.jpeg'> </img></p>
           
        </div>
         <div class="col-md-4">
-          <h2>Shopping</h2>
+          <h2>3/h2>
           <p>
           	<img src='file:///Users/ruthdarlow/desktop/shoppingbath2.jpeg'> </img>
           </p>
