--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Welcome to Bath!</h1>
-        <p>brief description</p>
+        <p>Looking for a beautiful and unique destination to enjoy the perfect city break? Wanting somewhere that’s brimming with things to do, a fantastic city centre, where you can shop until you drop but also relax and unwind? Then welcome to Bath, a city so beautiful and special that it has been designated a UNESCO World Heritage site.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
