--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="container">
         <h1>Welcome to Bath!</h1>
         <p>Looking for a beautiful and unique destination to enjoy the perfect city break? Wanting somewhere that’s brimming with things to do, a fantastic city centre, where you can shop until you drop but also relax and unwind? Then welcome to Bath, a city so beautiful and special that it has been designated a UNESCO World Heritage site.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        
       </div>
     </div>
 
@@ -78,7 +78,7 @@
           
        </div>
         <div class="col-md-4">
-          <h2>Shopping</h2>
+          <a href="shopping.html"><h2>Shopping</h2></a>
           <p>
           	<img src='file:///Users/ruthdarlow/desktop/bath-website/shoppingbath2.jpeg'> </img>
           </p>
