Change to images in index, unfinished thingstodo

--- a/thingstodo.html
+++ b/thingstodo.html
@@ -1,8 +1,108 @@
-<html>
-<head>
-	<title>Things to Do</title>
-</head>
-<body>
-Hello
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Welcome to Bath</title>
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+
+    <!-- Custom styles for this template -->
+    <link href="thingstodo.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Welcome to Bath</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <form class="navbar-form navbar-right">
+            <div class="form-group">
+              <input type="text" placeholder="Email" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="Password" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-success">Sign in</button>
+          </form>
+        </div><!--/.navbar-collapse -->
+      </div>
+    </nav>
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Things to do</h1>
+        <p>brief description</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-4">
+   
+            <a href="thingstodo.html"><h2>Sightseeing Tour</h2></a>
+          <p>
+
+          	<img src='bath.jpeg'> </img>
+            The City Sightseeing Bus Tour is a great, relaxing way to explore Bath and all its iconic attractions. You can’t miss the bright red, open-topped bus that can be found at 38 stops throughout the city. The sightseeing tour takes approximately 50 minutes but remember, you can hop on and off as many times as you wish, making it the perfect way to discover the city.
+          </p>
+          <p><a class="btn btn-default" href="#" role="button">View more &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>The Roman Bath</h2>
+          <p> Visit The Great Bath, the magnificent epicentre to the complex and walk on the ancient pavements as the Romans did 2,000 years ago. The Great Bath that lies below street level can also be viewed from the Terrace, which is adorned with statues and shadowed by the great Abbey. Other chambers to explore include the remains of the ancient heated rooms and changing rooms as well as tepid and plunge pools.</p>
+          <p><a class="btn btn-default" href="#" role="button">View more &raquo;</a></p>
+       </div>
+        <div class="col-md-4">
+          <h2>The Royal Crescent</h2>
+          <p>
+          	<img src='file:///Users/ruthdarlow/desktop/shoppingbath1.jpg'> </img>
+            The Royal Crescent, one of Bath’s most iconic landmarks, was built between 1767 and 1775 and designed by John Wood the Younger. This impressive landmark forms a sweeping crescent of 30 Grade I Listed terrace houses, and is without doubt one of the greatest examples of Georgian architecture anywhere in the UK. This world famous landmark is arranged around a perfect lawn overlooking Royal Victoria Park
+          </p>
+          
+        </div>
+      </div>
+
+      <hr>
+
+      <footer>
+        <p>&copy; Company 2014</p>
+
+      </footer>
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
