--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
        
         </div>
       </div>
+     
+       <p><a class="btn btn-primary btn-lg" href="index.html" role="button">Home &raquo;</a></p>
 
       <hr>
 
