added page nav at bottom

--- a/index.html
+++ b/index.html
@@ -85,10 +85,31 @@
        
         </div>
       </div>
-     
-       <p><a class="btn btn-primary btn-lg" href="index.html" role="button">Home &raquo;</a></p>
+<br>
+       <p><a class="btn btn-primary btn-lg" href="index.html" role="button">could link to visitbath &raquo;<span class="glyphicon glyphicon-tree-deciduous" aria-hidden="true"></span> </a></p>
+
+<nav>
+  <ul class="pagination">
+    <li>
+      <a href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="thingstodo.html">Things to Do</a></li>
+    <li><a href="placestoeat.html">Places to Eat</a></li>
+    <li><a href="shopping.html">Shopping</a></li>
+    <li>
+      <a href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
+  </ul>
+</nav>
 
       <hr>
+
+
 
       <footer>
         <p>&copy; Company 2014</p>
