--- a/placestoeat.html
+++ b/placestoeat.html
@@ -56,7 +56,7 @@
       <div class="container">
         <h1>Places to Eat</h1>
         <p>Bath holds some delicious treats!</p>
-        <p><a class="btn btn-primary btn-lg" href="index.html" role="button">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="index.html" role="button">Home &raquo;</a></p>
       </div>
     </div>
 
@@ -88,6 +88,25 @@ According to legend, Sally Lunn, a Huguenot refugee, arrived in Bath in 1680 and
        
         </div>
       </div>
+
+      <nav>
+  <ul class="pagination">
+    <li>
+      <a href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="thingstodo.html">Things to Do</a></li>
+    <li><a href="placestoeat.html">Places to Eat</a></li>
+    <li><a href="shopping.html">Shopping</a></li>
+    <li>
+      <a href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
+  </ul>
+</nav>
 
       <hr>
 
