--- a/shopping.html
+++ b/shopping.html
@@ -89,6 +89,25 @@ Many book shops can be found in Bath, ranging from well-known retailers like Wat
         </div>
       </div>
 
+      <nav>
+  <ul class="pagination">
+    <li>
+      <a href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="thingstodo.html">Things to Do</a></li>
+    <li><a href="placestoeat.html">Places to Eat</a></li>
+    <li><a href="shopping.html">Shopping</a></li>
+    <li>
+      <a href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+
       <hr>
 
       <footer>
