--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
       </div>
 <br>
-       <p><a class="btn btn-primary btn-lg" href="index.html" role="button">could link to visitbath &raquo;<span class="glyphicon glyphicon-tree-deciduous" aria-hidden="true"></span> </a></p>
+       <p><a class="btn btn-primary btn-lg" href="http://visitbath.co.uk/" role="button">Find out more on Visit Bath &raquo;<span class="glyphicon glyphicon-tree-deciduous" aria-hidden="true"></span> </a></p>
 
 <nav>
   <ul class="pagination">
