--- a/thingstodo.html
+++ b/thingstodo.html
@@ -56,6 +56,7 @@
       <div class="container">
         <h1>Things to do</h1>
         <p>Visit the local attractions!</p>
+        <p><a class="btn btn-primary btn-lg" href="index.html" role="button">Home &raquo;</a></p>
       </div>
     </div>
 
