--- a/shopping.html
+++ b/shopping.html
@@ -67,11 +67,10 @@
    
             <a href="http://www.sallylunns.co.uk/"><h2>Book Shops</h2></a>
          
-<<<<<<< HEAD
-          	<p> <img src='file:///Users/ruthdarlow/desktop/bath-website/bathbooks2.jpg'> </img>
-=======
+          	<p> <img src='bathbooks2.jpg'> </img>
+
           	<p> <img src='sally.jpeg'> </img>
->>>>>>> origin/master
+
           </p>
           <p>
 Many book shops can be found in Bath, ranging from well-known retailers like Waterstones to fabulous independents such as Topping & Company Booksellers, with its star studded line up of guest authors regularly visiting the shop.Don’t miss Mr B’s, appointed with comfy armchairs for curling up in, once you’ve found a good book. The Guildhall Market has a great stall that sells used books, where you can pick up some real bargains. If you’re after a book on local history or a guide book to the area, pop in the Visitor Information Centre Gift Shop, which stocks one of the best ranges of Bath books in town. <p/>
@@ -80,11 +79,11 @@ Many book shops can be found in Bath, ranging from well-known retailers like Wat
         <div class="col-md-4">
          <a href="http://www.thebathbun.com/"><h2>Fashion Shops</h2></a>
 
-<<<<<<< HEAD
-          <p><img src='file:///Users/ruthdarlow/desktop/bath-website/fashion3.jpg'> </img></p>
-=======
+
+          <p><img src='fashion3.jpg'> </img></p>
+
           <p><img src='bun.jpeg'> </img></p>
->>>>>>> origin/master
+          
           <p>Find the latest styles at one of the many leading brands in the city, such as, All Saints, Topshop, Hollister, Kurt Geiger, Reiss and Seasalt. For something special, head to one of the stores seldom found outside of London, such as Anthropologie, Toast, Gieves and Hawkes, Banana Republic and The Kooples. If you’re after something a little different that can’t be found elsewhere, make sure you explore the multitude of independent shops, famous for setting Bath apart from any other shopping destination. Find beautiful boots at Chanii B; luxury leather handbags at Ezza; pre-loved vintage clothing at Scarlet Vintage and Vintage to Vogue; and the latest ladies fashions at Blue and Square.</p> 
        </div>
         <div class="col-md-4">
