--- a/shopping.html
+++ b/shopping.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-md-4">
    
-            <a href="http://www.sallylunns.co.uk/"><h2>Book Shops</h2></a>
+            <a href="http://visitbath.co.uk/shopping/shops-in-bath/book-shops/"><h2>Book Shops</h2></a>
          
           	<p> <img src='bathbooks2.jpg'> </img>
 
@@ -75,7 +75,7 @@ Many book shops can be found in Bath, ranging from well-known retailers like Wat
          
         </div>
         <div class="col-md-4">
-         <a href="http://www.thebathbun.com/"><h2>Fashion Shops</h2></a>
+         <a href="http://visitbath.co.uk/shopping/shops-in-bath/fashion-shops"><h2>Fashion Shops</h2></a>
 
 
           <p><img src='fashion3.jpg'> </img></p>
@@ -83,7 +83,7 @@ Many book shops can be found in Bath, ranging from well-known retailers like Wat
           <p>Find the latest styles at one of the many leading brands in the city, such as, All Saints, Topshop, Hollister, Kurt Geiger, Reiss and Seasalt. For something special, head to one of the stores seldom found outside of London, such as Anthropologie, Toast, Gieves and Hawkes, Banana Republic and The Kooples. If you’re after something a little different that can’t be found elsewhere, make sure you explore the multitude of independent shops, famous for setting Bath apart from any other shopping destination. Find beautiful boots at Chanii B; luxury leather handbags at Ezza; pre-loved vintage clothing at Scarlet Vintage and Vintage to Vogue; and the latest ladies fashions at Blue and Square.</p> 
        </div>
         <div class="col-md-4">
-          <a href="https://www.jamieoliver.com/italian/restaurants/bath/"><h2>Gift Shops</h2></a>
+          <a href="http://visitbath.co.uk/shopping/shops-in-bath/gift-and-souvenir-shops"><h2>Gift Shops</h2></a>
           <p>
           	<img src='gift.jpeg'> </img>
           </p>
