Added Bath in Motion Video

--- a/placestoeat.html
+++ b/placestoeat.html
@@ -94,6 +94,7 @@ According to legend, Sally Lunn, a Huguenot refugee, arrived in Bath in 1680 and
     <li><a href="thingstodo.html">Things to Do</a></li>
     <li><a href="placestoeat.html">Places to Eat</a></li>
     <li><a href="shopping.html">Shopping</a></li>
+     <li><a href="Bath in Motion.html">Bath in Motion</a><li>
     <li>
       <a href="#" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
