--- a/shopping.html
+++ b/shopping.html
@@ -103,6 +103,7 @@ Many book shops can be found in Bath, ranging from well-known retailers like Wat
     <li><a href="thingstodo.html">Things to Do</a></li>
     <li><a href="placestoeat.html">Places to Eat</a></li>
     <li><a href="shopping.html">Shopping</a></li>
+    <li><a href="Bath in Motion.html">Bath in Motion</a><li>
     <li>
       <a href="#" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
