--- a/thingstodo.html
+++ b/thingstodo.html
@@ -100,6 +100,7 @@
     <li><a href="placestoeat.html">Places to Eat</a></li>
     <li><a href="shopping.html">Shopping</a></li>
     <li>
+       <li><a href="Bath in Motion.html">Bath in Motion</a><li>
       <a href="#" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
       </a>
